<resources>
    <string name="app_name">HardWhere</string>
    <!-- Strings related to login -->
    <string name="prompt_api_endpoint">API Endpoint</string>
    <string name="prompt_api_token">API Token</string>
    <string name="prompt_user_id">User ID</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_scan_login">Scan Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_api_endpoint">Not a valid API endpoint.</string>
    <string name="error_unknown_host">Unknown api host!</string>
    <string name="invalid_token">API Token has to be >30 characters.</string>
    <string name="invalid_connection">No connection! Internet disabled?</string>
    <string name="invalid_user_id">Invalid user ID provided.</string>
    <string name="login_failed">"Login failed, invalid token."</string>
    <string name="invalid_login_json">Invalid login json!</string>
    <string name="empty_login_json">No login data found!</string>
    <string name="title_activity_main">HardWhere</string>
    <string name="title_activity_login">HardWhere Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Loading User</string>
    <string name="nav_header_subtitle">Loading User Data</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="invalid_asset_code">Invalid QR Code</string>
    <string name="title_multiedit">Multi-Edit</string>
    <string name="title_clear">Clear List</string>
    <string name="invalid_scan_id">Invalid ID ? Unable to fetch asset.</string>
    <string name="hint_default_location">Asset Default Location</string>
    <string name="hint_category">Asset Category</string>
    <string name="hint_model">Model</string>
    <string name="hint_manufacturer">Manufacturer</string>
    <string name="hint_asset_tag">Unique Asset Tag</string>
    <string name="hint_asset_name">Asset Name</string>
    <string name="error_fetch_selectable">Can\'t fetch data!</string>
    <string name="info_multiple_models_editing">Custom attributes can only be edited per-model.</string>
    <string name="todo">Not yet implemented.</string>

    <string name="menu_checkin">Checkin</string>
    <string name="menu_editor">Editor</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_dev">Test</string>

    <string name="PLACEHOLDER">PLACEHOLDER</string>
    <string name="failure_userinfo">Unable to retrieve user data! Missing permissions?!</string>
    <string name="search">Search</string>
    <string name="hint_note">Note</string>
    <string name="title_finish_edit">Update</string>
    <string name="toast_no_tag_multiedit">Asset Tags have to be unique</string>
    <string name="duplicate_scan">Duplicate Item</string>
    <string name="duplicate_manual">Asset already in list</string>
    <string name="scan_hint">Scan assets to edit their attributes</string>
    <string name="title_manual">Manual Tag</string>
    <string name="title_editor_asset">Asset Editor</string>
    <string name="title_scanner">Asset Scanner</string>
    <string name="title_filter">Filter</string>
    <string name="filter_title">Filter BY</string>
    <string name="no_filter">No Filter</string>
    <string name="remove_list_entry">Remove</string>
    <string name="error_fetch_update">Unable to update data!%1$s</string>
    <string name="error_checkout_assets">Unable to checkout some assets!%1$s</string>
    <string name="error_checkin_assets">Unable to checkin some assets!%1$</string>
    <string name="editor_switch_update">Update</string>
    <string name="asset_category_uneditable">Categories depend on the model.</string>
    <string name="menu_about">About</string>
    <string name="scan_action_button_description">Scan QR code of asset</string>
    <string name="menu_checkin_assets">Checkin Assets</string>
    <string name="title_lenting_next">Lent</string>
    <string name="lenting_scanlist_hint">Scan assets to lent\nContinue to select user</string>
    <string name="lentingListFragment">Asset Lenting</string>
    <string name="menu_lent">Lent Assets</string>
    <string name="frag_lenting_scanner_title">Scan assets to lent</string>
    <string name="lenting_alert_confirm_msg">Do you want to lent these item to %1$s ?</string>
    <string name="selfcheckout_alert_confirm_msg">Do you want to checkout these items ?</string>
    <string name="checkin_alert_confirm_msg">Do you want to return these items ?</string>
    <string name="scanned_asset_not_checkedout">Asset %1$s is not checked out!</string>
    <string name="scanned_asset_not_own">Asset %1$s is not checked out to you!</string>
    <string name="menu_own">My Assets</string>
    <string name="nav_checkin">Return Assets</string>
    <string name="scanned_asset_checkedout">Asset %1$s is already checked out to %2$s!</string>
    <string name="own_scanlist_hint">Scan assets to checkout to you</string>
    <string name="checkin_scanlist_hint">Scan assets to return</string>
    <string name="frag_myassets_scanlist_title">Checkout Assets</string>
    <string name="frag_checkin_scanner_title">Scan Assets For Check-in</string>
    <string name="frag_search_title">Search</string>
    <string name="menu_sort">Sort by</string>
    <string name="menu_filter">Filter by</string>
    <string name="checkout_assets_assigned_msg">You have lent assets in your list!</string>
    <string name="checkin_assets_unassigned_msg">You have unassigned assets in your list!</string>
    <string name="no_user_assets_hint">No assets assigned to this user.</string>
    <string name="error_fetch_checkedout">Failed to load checked out assets!</string>
    <string name="lent_asset_bt_action">Asset Action</string>
    <string name="filter_by_user_x">Filter by user %1$s</string>
    <string name="show_assets_of_x">Show assets of %1$s</string>
    <string name="filtering_by_x">Filtering by %1$s</string>
    <string name="select_user">Select user to inspect</string>
    <string name="show_asset_details">Show asset info</string>
    <string name="filter_by_asset_attributes">Filter by asset attributes..</string>
    <string name="sort_title">Sort By</string>
    <string name="no_sort">Nothing</string>
    <string name="showing_user">Showing %1$s assets</string>
    <string name="menu_user_list">User Assets</string>
    <string name="crash_dialog_email">optional email</string>
    <string name="crash_dialog_comment">optional comment what you did</string>
    <string name="crash_dialog_negative">Cancel Report</string>
    <string name="crash_dialog_positive">Send crash report</string>
    <string name="crash_dialog_title">Crash Report</string>
    <string name="crash_dialog_text">The app crashed, please send a crash report if possible.</string>
    <string name="loading_fieldset">Loading custom fields</string>
    <string name="error_fieldset">Failed to load custom fields!</string>
    <string name="custom_field_selection_title">Select Value for %1$s</string>
    <string name="invalid_api_endpoint_https">Endpoint has to start with https://</string>
</resources>