<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/manual"
        android:icon="@drawable/ic_type_white_24dp"
        android:title="@string/title_manual"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/clear"
        android:icon="@drawable/ic_empty_white_24dp"
        android:title="@string/title_clear"
        android:orderInCategory="2"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/title_multiedit"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />
</menu>