<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/frag_asset_info_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

        <de.tu_darmstadt.seemoo.LARS.ui.editor.AssetAttributeView
            android:id="@+id/assetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:editable="false"
            app:label="@string/hint_asset_name" />
        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent">-->

        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:id="@+id/assetName"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:hint="@string/hint_asset_name" />-->
        <!--        </com.google.android.material.textfield.TextInputLayout>-->

        <de.tu_darmstadt.seemoo.LARS.ui.editor.AssetAttributeView
            android:id="@+id/assetTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:editable="false"
            app:label="@string/hint_asset_tag" />
        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent">-->

        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:id="@+id/assetTag"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:hint="@string/hint_asset_tag" />-->
        <!--        </com.google.android.material.textfield.TextInputLayout>-->

        <de.tu_darmstadt.seemoo.LARS.ui.editor.AssetAttributeView
            android:id="@+id/locationPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            app:editable="false"
            app:label="@string/hint_default_location" />
        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent">-->

        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:id="@+id/locationPicker"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:focusable="false"-->
        <!--                android:hint="@string/hint_location"-->
        <!--                android:inputType="textNoSuggestions" />-->
        <!--        </com.google.android.material.textfield.TextInputLayout>-->

        <de.tu_darmstadt.seemoo.LARS.ui.editor.AssetAttributeView
            android:id="@+id/modelPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            app:editable="false"
            app:label="@string/hint_model" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/categoryPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/hint_category"
                android:inputType="textNoSuggestions" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent">-->

        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:id="@+id/commentEditor"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:gravity="top|start"-->
        <!--                android:hint="@string/hint_note"-->
        <!--                android:importantForAutofill="no"-->
        <!--                android:inputType="textMultiLine"-->
        <!--                android:lines="4"-->
        <!--                android:minLines="6"-->
        <!--                android:scrollbars="vertical" />-->
        <!--        </com.google.android.material.textfield.TextInputLayout>-->
        <de.tu_darmstadt.seemoo.LARS.ui.editor.AssetAttributeView
            android:id="@+id/commentEditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="4"
            android:minLines="6"
            app:editable="false"
            app:label="@string/hint_note" />

    </LinearLayout>
</ScrollView>